WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212663
Assert network process is not suspended when trying to merge new ITP data
https://bugs.webkit.org/show_bug.cgi?id=212663
Summary
Assert network process is not suspended when trying to merge new ITP data
Kate Cheney
Reported
2020-06-02 14:38:53 PDT
Add an assert to check for attempts to merge new ITP statistics when the network process is suspended. If this assert is hit, it indicates the ITP database thread is not being properly stopped during a call to WebResourceLoadStatisticsStore::suspend().
Attachments
Patch
(1.87 KB, patch)
2020-06-02 14:45 PDT
,
Kate Cheney
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-06-02 14:39:20 PDT
<
rdar://problem/63892899
>
Kate Cheney
Comment 2
2020-06-02 14:45:35 PDT
Created
attachment 400857
[details]
Patch
EWS
Comment 3
2020-06-02 15:13:12 PDT
Committed
r262455
: <
https://trac.webkit.org/changeset/262455
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 400857
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug