Assert network process is not suspended when trying to merge new ITP data https://bugs.webkit.org/show_bug.cgi?id=212663 <rdar://problem/63892899>

Reviewed by Chris Dumez.

Add a debug assert to check if statistics are being merged into the
ITP database after prepareToSuspend() has been called. If this assert
is hit, it means the ITP database thread is not being stopped when
the process is suspended.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::resourceLoadStatisticsUpdated):


Canonical link: https://commits.webkit.org/225485@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262455 268f45cc-cd09-0410-ab3c-d52691b4dbfc